--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
   <main>
     <!-- solution start -->
     <h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
-    <img class="img1"><img class="img1"><img class="img2"><img class="img3"><img class="img4"><img class="img5">
+    <img><img><img><img><img><img>
     <p id="para">You are a human. Congratulations!</p>
     <p id="para">We can't verify you as a human. You selected the non-identical tiles.</p>
     <button id="reset">Reset</button>
     <button id="verify">Verify</button>
     <!-- solution end -->
   </main>
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
